# Detours

./: CMakeLists.txt
vs2019/: Detours.vcxproj  Detours.vcxproj.filters
vs2022/: Detours.vcxproj
